# dxw32

./: .clang-format  .gitignore  CMakeLists.txt  Experiment.h  Makefile  RegKey.hpp  about.cpp  axis.cpp  axis.h  ch_draw.cpp  channell.cpp  cut.cpp  cut_g.cpp  cutwnd.h  data.cpp  digitize.cpp  dxw.h  dxw.hpj  dxw.rc  dxw.rtf  dxw_rc.h  fft.cpp  frame.cpp  gaug_inl.h  gauge.cpp  gauge.h  imp.cpp  info.cpp  linterp.h  main.cpp  pline.cpp  pline.h  pointer.cpp  print.cpp  r_dl.cpp  r_head.cpp  rascii.cpp  read_cha.cpp  rename.cpp  resource.h  (+14 more)
.github/workflows/: cmake-single-platform.yml
